sonarcube fixes